2012-06-11  Araki Ken  <arakiken@users.sf.net>

	* README.ja, README.cairo: Fixed.

	* x_font_ft.c: If ":percent" is specified in ~/.mlterm/*font, x_off
	  is set to center a character in the cell.

	* x_draw_str.c: If current and next characters are bold or not is checked
	  by the value of ml_char_font() instead of xfont->id.

2012-06-09  Araki Ken  <arakiken@users.sf.net>

	* doc/en/PROTOCOL, doc/en/README.cairo: Updated.

	* x_screen.c: cursor blinking is stopped in unfocused.

	* xlib/x_font.c, x_font_ft.c, win32/x_font.c, xlib/x_window.c,
	  x_window_cairo.c, x_window_xft.c:
	  - If letter_space is larger than 0, x_off += letter_space / 2 to
	    center a character in the cell.
	  - If x_off is larger than 0, x_window_draw_string*() draws string
	    from x + x_off.

	* x_screen.c, x_font_manager.[ch], x_main_config.[ch], gtk/vte.c:
	  --bdfont / "use_bold_font" option is added.

	* MLTermPty.c: "ssh_x11_forwarding" option is supprted.

	* ml_pty_ssh.c: Minor fixes.

	* version.h.in: 3.1.2 post => 3.1.3 pre

2012-06-06  Araki Ken  <arakiken@users.sf.net>

	* etc/main, etc/main.ja, doc/ja/README.ja, main/mlterm.1: Updated.

	* x_event_source.c: x11 forwarding events are polled and dispatched.

	* x_main_config.c: "ssh_x11_forwarding" option is added.

	* ml_pty.h, ml_pty_ssh.c: X11 forwarding functions
	  (ml_pty_ssh_set_use_x11_forwarding, ml_pty_ssh_get_x11_fds and
	   ml_pty_ssh_send_recv_x11) are added.

2012-06-02  Araki Ken  <arakiken@users.sf.net>

	* x_event_source.[ch]: Macros -> Dummy functions.

	* x_screen_manager.c: If open_pty_intern() fails in open_screen_intern(),
	  new screen is not added to static variable screens.

	* ml_vt100_parser.c: MAX_PS_DIGIT macro is defined.

	* ml_screen.c: Max number of lines to be inserted or deleted is
	  number of screen rows.

2012-06-01  Araki Ken  <arakiken@users.sf.net>

	* win32/x_font.c: Minor fixes.

	* vte.c, ml_vt100_parser.c, x_imagelib.c: Usage of DIGIT_STR_LEN is fixed.
