@@ -1,5 +1,6 @@
 ver 3.1.3
 * Support OSC 5;0 and OSC 5;1.
+* Support CSI ? 8840 h and CSI ? 8840 l.
 * Add "ssh_keepalive_interval" option.
 * Add "ssh_x11_forwarding" option.
 * Add "use_bold_font" option.
@@ -8,6 +9,7 @@ ver 3.1.3
   #3529386 (Thanks to Ahmed El-Mahmoudy)
   #3530235 (Thanks to Ahmed El-Mahmoudy)
 * Bug fixes:
+  #3528838 (Thanks to Thomas Wolff)
   #3528836 (Thanks to Thomas Wolff)
   Fix a bug which wrongly keeps a screen which has failed to open.
   Show characters in the center of cells whose width is larger than the default.
